# fast-san-parser

./: CMakeLists.txt  bench_fast.cpp  chess.hpp  fast-san.cpp  fast-san.hpp  generate_bench.sh
benchmarks/: CMakeLists.txt  bench_fast.cpp  bench_original.cpp
include/fast-san-parser/: fast-san.hpp
src/: fast-san.cpp
